--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class="barva">
 <div id="header">
 
-    <img src="images/palm.png" width="50">
+    <img src="images/palm.png" width="50" class="left">
     <h3>Za Sluncem</h3>
     <div class="clean"></div>
 </div>
@@ -31,22 +31,36 @@
 </div>
 <div class="zac">
      <img src="images/happzonbeach.jpg">
-
+    <div class="perex">asdasd</div>
 </div>
 
 <div class="upot">
-    <img src="images/bali.png">
-    <p class="price">200kc</p>
+    <div class="left">
+        <img src="images/bali.png">
+    </div>
+    <div>
+        <h4>Romaticka dovolena na Bali</h4>
+    </div>
+    <div class="clean"></div>
 </div>
 
 <div class="upot">
-    <img src="images/bermude.png">
-
+    <div class="right">
+        <img src="images/bermude.png">
+    </div>
+    <div>
+        <h4>10-denni zajezd k bermudskemu trojuhleniku</h4>
+    </div>
+    <div class="clean"></div>
 </div>
-
 <div class="upot">
-    <img src="images/33.png">
-
+    <div class="medium">
+        <img src="images/33.png">
+    </div>
+    <div>
+        <h4>Rodinna dovolena na Sahare</h4>
+    </div>
+    <div class="clean"></div>
 </div>
 
 <div class="konec">
