--- a/index.html
+++ b/index.html
@@ -7,30 +7,30 @@
 </head>
 <body>
 <div class="barva">
-<div id="header">
+    <div id="header">
 
-    <img src="images/palm.png" width="50" class="left">
-    <h3>Za Sluncem</h3>
-    <div class="clean"></div>
-</div>
+        <img src="images/palm.png" width="50" class="left">
+        <h1>Za Sluncem</h1>
+        <div class="clean"></div>
+    </div>
 
-<div id="menu">
-     <ul>
-         <li>
-             Last Minute
-         </li>
-         <li>
-             Destinace
-         </li>
-         <li>
-             Kontakt
-         </li>
-     </ul>
+    <div id="menu">
+        <ul>
+            <li>
+                Last Minute
+            </li>
+            <li>
+                Destinace
+            </li>
+            <li>
+                Kontakt
+            </li>
+        </ul>
 
-</div>
+    </div>
 </div>
 <div class="zac">
-     <img src="images/happzonbeach.jpg">
+    <img src="images/happzonbeach.jpg">
     <div class="perex">asdasd</div>
 </div>
 
@@ -38,9 +38,20 @@
     <div class="left">
         <img src="images/bali.png">
     </div>
+
     <div>
-        <h4>Romaticka dovolena na Bali</h4>
+        <h2>Romaticka dovolena na Bali</h2>
     </div>
+    <div class="info1">
+        <p>- 2 týdny </p>
+        <p>- 2 osoby </p>
+        <p>- cesta tam - letadlo </p>
+        <p>- cesta zpět - letadlo </p>
+        <p>- ubytování - 4* hotel </p>
+    </div>
+    <!--<div class="b">-->
+        <!--<h3>Mám zájem</h3>-->
+    <!--</div>-->
     <div class="clean"></div>
 </div>
 
@@ -49,7 +60,7 @@
         <img src="images/bermude.png">
     </div>
     <div>
-        <h4>10-denni zajezd k bermudskemu trojuhleniku</h4>
+        <h2>10-denni zájezd k bermudskemu trojuhleniku</h2>
     </div>
     <div class="clean"></div>
 </div>
@@ -58,7 +69,7 @@
         <img src="images/33.png">
     </div>
     <div>
-        <h4>Rodinna dovolena na Sahare</h4>
+        <h2>Rodinna dovolena na Sahare</h2>
     </div>
     <div class="clean"></div>
 </div>
