--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="header">
 
         <img src="images/palm.png" width="50" class="left">
-        <h1>Za Sluncem</h1>
+        <div>Za Sluncem</div>
         <div class="clean"></div>
     </div>
 
@@ -39,10 +39,10 @@
         <img src="images/bali.png">
     </div>
 
-    <div>
+    <div class="info">
         <h2>Romaticka dovolena na Bali</h2>
     </div>
-    <div class="info1">
+    <div class="info1 info">
         <p>- 2 týdny </p>
         <p>- 2 osoby </p>
         <p>- cesta tam - letadlo </p>
@@ -62,6 +62,12 @@
     <div>
         <h2>10-denni zájezd k bermudskemu trojuhleniku</h2>
     </div>
+    <div class="info2 info"
+    <p>- 3 dny </p>
+    <p>- omezena kapacita </p>
+    <p>- doprava letadlem na Floridu </p>
+    <p>     -> z Floridy lodi</p>
+    <p>- ubytovani na penzionu</p>
     <div class="clean"></div>
 </div>
 <div class="upot">
