--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
     <meta charset="UTF-8">
     <title>za sluncem</title>
@@ -48,6 +48,7 @@
         <p>- cesta tam - letadlo </p>
         <p>- cesta zpět - letadlo </p>
         <p>- ubytování - 4* hotel </p>
+        <a href="detail.html">Mam zajem</a>
     </div>
     <!--<div class="b">-->
         <!--<h3>Mám zájem</h3>-->
@@ -77,9 +78,67 @@
     <div>
         <h2>Rodinna dovolena na Sahare</h2>
     </div>
+    <div class="info3 info">
+        <p>- moznost pobytu az na 14 dni</p>
+        <p>- skvela dovolena pro celou rodinu</p>
+        <p>- zarucene vzdy slunecnne pocasi</p>
+        <p>- doprava letadlem</p>
+        <p>- ubytovani u mistnich obzvetel</p>
+    </div>
+    <div class="clean"></div>
+</div>
+<div class="upot">
+    <div class="left">
+        <img src="images/bali.png">
+    </div>
+
+    <div class="info">
+        <h2>Romaticka dovolena na Bali</h2>
+    </div>
+    <div class="info1 info">
+        <p>- 2 týdny </p>
+        <p>- 2 osoby </p>
+        <p>- cesta tam - letadlo </p>
+        <p>- cesta zpět - letadlo </p>
+        <p>- ubytování - 4* hotel </p>
+    </div>
+    <!--<div class="b">-->
+    <!--<h3>Mám zájem</h3>-->
+    <!--</div>-->
     <div class="clean"></div>
 </div>
 
+<div class="upot">
+    <div class="right">
+        <img src="images/bermude.png">
+    </div>
+    <div>
+        <h2>10-denni zájezd k bermudskemu trojuhleniku</h2>
+    </div>
+    <div class="info2 info"
+    <p>- 3 dny </p>
+    <p>- omezena kapacita </p>
+    <p>- doprava letadlem na Floridu </p>
+    <p>     -> z Floridy lodi</p>
+    <p>- ubytovani na penzionu</p>
+    <div class="clean"></div>
+</div>
+<div class="upot">
+    <div class="medium">
+        <img src="images/33.png">
+    </div>
+    <div>
+        <h2>Rodinna dovolena na Sahare</h2>
+    </div>
+    <div class="info3 info">
+        <p>- moznost pobytu az na 14 dni</p>
+        <p>- skvela dovolena pro celou rodinu</p>
+        <p>- zarucene vzdy slunecnne pocasi</p>
+        <p>- doprava letadlem</p>
+        <p>- ubytovani u mistnich obzvetel</p>
+    </div>
+    <div class="clean"></div>
+</div>
 <div class="konec">
 
 </div>
