zmeny streda vecer 10

--- a/detail.html
+++ b/detail.html
@@ -10,7 +10,7 @@
     <div id="header">
 
         <img src="images/palm.png" width="50" class="left">
-        <div>Za Sluncem</div>
+        <a href="index.html">Za Sluncem</a>
         <div class="clean"></div>
     </div>
 
