--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="header">
 
         <img src="images/palm.png" width="50" class="left">
-        <div>Za Sluncem</div>
+        <a href="index.html">Za Sluncem</a>
         <div class="clean"></div>
     </div>
 
@@ -23,7 +23,7 @@
                 Destinace
             </li>
             <li>
-                Kontakt
+                <a href="Kontakt.html">Kontakt</a>
             </li>
         </ul>
 
@@ -40,7 +40,7 @@
     </div>
 
     <div class="info">
-        <h2>Romaticka dovolena na Bali</h2>
+        <a href="detail.html"><h2>Romaticka dovolena na Bali</h2></a>
     </div>
     <div class="info1 info">
         <p>- 2 týdny </p>
