--- a/detail.html
+++ b/detail.html
@@ -31,15 +31,21 @@
 </div>
 <div class="zac">
     <img src="images/happzonbeach.jpg">
-    <div class="perex">asdasd</div>
+    <div class="perex"></div>
 </div>
-<h1 class="detail-title"> Romantická dovolená na Bali</h1>
+<div class="stred">
+    <h1 class="detail-title"> Romantická dovolená na Bali</h1>
+    <img src="images/where-is-bali.jpg">
+</div>
 
 
+    <h3 class="balii">
+        <p>Užijte si romantickou dovolenou v nádherném prostředí Bali. </p> <p>Dvou-týdení pobyt v 4* hotelu hned na břehu moře si
+        jistě oblíbíte, po domluvě je možné zařídit také speciálně upravený program, přesně dle vašich představ a
+        potřeb.</p> <p>V ceně je zahrnuto: Strava, Vstupné, Letenky a samozřejmě i ubytování.</p>
+    </h3>
 
-
-
-
+</div>
 
 
 <div class="konec">
