--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="barva">
-    <div id="header">
+    <div class="header">
 
         <img src="images/palm.png" width="50" class="left">
         <a href="index.html">Za Sluncem</a>
@@ -40,7 +40,7 @@
     </div>
 
     <div class="info">
-        <a href="detail.html"><h2>Romaticka dovolena na Bali</h2></a>
+        <a  href="detail.html"><h2>Romaticka dovolena na Bali</h2></a>
     </div>
     <div class="info1 info">
         <p>- 2 týdny </p>
@@ -48,7 +48,7 @@
         <p>- cesta tam - letadlo </p>
         <p>- cesta zpět - letadlo </p>
         <p>- ubytování - 4* hotel </p>
-        <a href="detail.html">Mam zajem</a>
+        <a class="zajem" href="detail.html">Mam zajem</a>
     </div>
     <!--<div class="b">-->
         <!--<h3>Mám zájem</h3>-->
@@ -57,89 +57,44 @@
 </div>
 
 <div class="upot">
-    <div class="right">
+    <div class="left">
         <img src="images/bermude.png">
     </div>
-    <div>
-        <h2>10-denni zájezd k bermudskemu trojuhleniku</h2>
-    </div>
-    <div class="info2 info"
-    <p>- 3 dny </p>
-    <p>- omezena kapacita </p>
-    <p>- doprava letadlem na Floridu </p>
-    <p>     -> z Floridy lodi</p>
-    <p>- ubytovani na penzionu</p>
-    <div class="clean"></div>
-</div>
-<div class="upot">
-    <div class="medium">
-        <img src="images/33.png">
-    </div>
-    <div>
-        <h2>Rodinna dovolena na Sahare</h2>
-    </div>
-    <div class="info3 info">
-        <p>- moznost pobytu az na 14 dni</p>
-        <p>- skvela dovolena pro celou rodinu</p>
-        <p>- zarucene vzdy slunecnne pocasi</p>
-        <p>- doprava letadlem</p>
-        <p>- ubytovani u mistnich obzvetel</p>
-    </div>
-    <div class="clean"></div>
-</div>
-<div class="upot">
-    <div class="left">
-        <img src="images/bali.png">
-    </div>
-
     <div class="info">
-        <h2>Romaticka dovolena na Bali</h2>
+        <h2>3-denni zájezd k bermudskemu trojuhleniku</h2>
     </div>
     <div class="info1 info">
-        <p>- 2 týdny </p>
-        <p>- 2 osoby </p>
-        <p>- cesta tam - letadlo </p>
-        <p>- cesta zpět - letadlo </p>
-        <p>- ubytování - 4* hotel </p>
+        <p>- 3 dny </p>
+        <p>- omezena kapacita </p>
+        <p>- doprava letadlem na Floridu </p>
+        <p>     -> z Floridy lodi</p>
+        <p>- ubytovani na penzionu</p>
+        <a class="zajem">Mam zajem</a>
     </div>
-    <!--<div class="b">-->
-    <!--<h3>Mám zájem</h3>-->
-    <!--</div>-->
     <div class="clean"></div>
 </div>
 
 <div class="upot">
-    <div class="right">
-        <img src="images/bermude.png">
-    </div>
-    <div>
-        <h2>10-denni zájezd k bermudskemu trojuhleniku</h2>
-    </div>
-    <div class="info2 info"
-    <p>- 3 dny </p>
-    <p>- omezena kapacita </p>
-    <p>- doprava letadlem na Floridu </p>
-    <p>     -> z Floridy lodi</p>
-    <p>- ubytovani na penzionu</p>
-    <div class="clean"></div>
-</div>
-<div class="upot">
-    <div class="medium">
+    <div class="left">
         <img src="images/33.png">
     </div>
-    <div>
+    <div class="info">
         <h2>Rodinna dovolena na Sahare</h2>
     </div>
-    <div class="info3 info">
+    <div class="info1 info">
         <p>- moznost pobytu az na 14 dni</p>
         <p>- skvela dovolena pro celou rodinu</p>
         <p>- zarucene vzdy slunecnne pocasi</p>
         <p>- doprava letadlem</p>
         <p>- ubytovani u mistnich obzvetel</p>
+        <a class="zajem">Mam zajem</a>
     </div>
     <div class="clean"></div>
 </div>
+
+
 <div class="konec">
+
 
 </div>
 </body>
