--- a/detail.html
+++ b/detail.html
@@ -33,17 +33,27 @@
     <img src="images/happzonbeach.jpg">
     <div class="perex"></div>
 </div>
+
 <div class="stred">
     <h1 class="detail-title"> Romantická dovolená na Bali</h1>
-    <img src="images/where-is-bali.jpg">
+    <img src="images/where-is-bali.jpg" width="800">
+
+
+    <div class="popis">
+        <p>Užijte si romantickou dovolenou v nádherném prostředí Bali. </p>
+        <p>Dvou-týdení pobyt v 4* hotelu hned na břehu moře si
+            jistě oblíbíte, po domluvě je možné zařídit také speciálně upravený program, přesně dle vašich představ a
+            potřeb.</p>
+        <p>V ceně je zahrnuto: Strava, Vstupné, Letenky a samozřejmě i ubytování.</p>
+    </div>
+    <form>
+        <input type="date">
+        <input type="submit">
+    </form>
+
 </div>
 
 
-    <h3 class="balii">
-        <p>Užijte si romantickou dovolenou v nádherném prostředí Bali. </p> <p>Dvou-týdení pobyt v 4* hotelu hned na břehu moře si
-        jistě oblíbíte, po domluvě je možné zařídit také speciálně upravený program, přesně dle vašich představ a
-        potřeb.</p> <p>V ceně je zahrnuto: Strava, Vstupné, Letenky a samozřejmě i ubytování.</p>
-    </h3>
 
 </div>
 
