--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </div>
 <div class="zac">
     <img src="images/happzonbeach.jpg">
-    <div class="perex">asdasd</div>
+    <div class="perex"><b>Vydejte se za slunickem s nejlepsi zajezdovou kancelari!</b></div>
 </div>
 
 <div class="upot">
@@ -94,7 +94,11 @@
 
 
 <div class="konec">
-
+    <b>Telefon:</b>
+    + 420 775 293 365 <br>
+    + 420 326 965 235 <br>
+    <b>Email:</b>
+    info@zasluncem.cz <br>
 
 </div>
 </body>
