--- a/Kontakt.html
+++ b/Kontakt.html
@@ -36,6 +36,8 @@
     <div class="tel">
         <h4>Telefon</h4>
         + 420 775 293 365
+        <p><b>Oteviraci doba:</b></p>
+        <p>Po-Ne: 8:00 - 20:00</p>
         <h4>Email</h4>
         info@zasluncem.cz
     </div>
