--- a/detail.html
+++ b/detail.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
+
 <div class="barva">
     <div id="header">
 
@@ -40,17 +41,22 @@
 
 
     <div class="popis">
-        <p>Užijte si romantickou dovolenou v nádherném prostředí Bali. </p>
+        <b><p>Užijte si romantickou dovolenou v nádherném prostředí Bali. </p>
         <p>Dvou-týdení pobyt v 4* hotelu hned na břehu moře si
             jistě oblíbíte, po domluvě je možné zařídit také speciálně upravený program, přesně dle vašich představ a
             potřeb.</p>
-        <p>V ceně je zahrnuto: Strava, Vstupné, Letenky a samozřejmě i ubytování.</p>
+        <p>V ceně je zahrnuto: Strava, Vstupné, Letenky a samozřejmě i ubytování.</p> </b>
     </div>
-    <form>
-        <input type="date">
-        <input type="submit">
-    </form>
+   <div class="obednat"> <form>
+        <p> <b> Odjezd: </b><input type="date"> </p>
+        <p><b> Příjezd:</b> <input type="date"> </p>
+        <p> <b> Telefonní Číslo: </b><input type="number"> </p>
+        <p><b> Souhlasím s Podmínkami </b><input type="checkbox"> </p>
+       <p> <b> Počet Dní</b> <input type="number"> </p>
 
+        <p><input type="submit"> </p>
+    </form>
+   </div>
 </div>
 
 
