--- a/detaildva.html
+++ b/detaildva.html
@@ -36,17 +36,15 @@
 </div>
 
 <div class="stred">
-    <h1 class="detail-title"> Romantická dovolená na Bali</h1>
-    <img src="images/where-is-bali.jpg" width="800">
+    <h1 class="detail-title"> 3-denní zájezd k Bermudskému trojúhleníku</h1>
+    <img src="images/trojuhelnik.jpg" width="800">
 
 
     <div class="popis">
-        <p>Užijte si romantickou dovolenou v nádherném prostředí Bali. </p>
-        <p>Dvou-týdení pobyt v 4* hotelu hned na břehu moře si
-            jistě oblíbíte, po domluvě je možné zařídit také speciálně upravený program, přesně dle vašich představ
-            a
-            potřeb.</p>
-        <p>V ceně je zahrnuto: Strava, Vstupné, Letenky a samozřejmě i ubytování.</p>
+        <p>Máte rádi dobrodružství, adrenalin a prozkoumávání neznáma? </p>
+        <p>Máte rádi cestování po moři?</p>
+        <p> Poté je tento třídenní zájezd k Bermudskému trojúheníku stvořen přesně pro vás!</p>
+        <p>V ceně je zahrnuto: Strava, Letenky a samozřejmě i ubytování na lodi.</p>
     </div>
 
 
