--- a/Kontakt.html
+++ b/Kontakt.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="barva">
-    <div id="header">
+    <div class="header">
 
         <img src="images/palm.png" width="50" class="left">
         <a href="index.html">Za Sluncem</a>
@@ -31,14 +31,17 @@
 </div>
 <div class="kon">
     <h2>KONTAKT</h2>
+
 </div>
 <div id="info">
     <div class="tel">
-        <h4>Telefon</h4>
-        + 420 775 293 365
-        <p><b>Oteviraci doba:</b></p>
+        <h4>Rezervace:</h4>
+        + 420 775 293 365<br>
+        <h4>Telefon:</h4>
+        + 420 326 965 235
+        <h4>Oteviraci doba:</h4>
         <p>Po-Ne: 8:00 - 20:00</p>
-        <h4>Email</h4>
+        <h4>Email:</h4>
         info@zasluncem.cz
     </div>
     <div class="adress">
@@ -46,10 +49,23 @@
         <p>Namesti Junkovych 2808</p>
         <p>Praha 5</p>
         <p>155 00</p>
-        <map>
-            <area href="https://www.google.cz/maps/place/Vodafone+%C4%8Cesk%C3%A1+republika/@50.0484739,14.3077214,16z/data=!4m13!1m7!3m6!1s0x470b95e648c59e89:0x9226e4f134a4eb61!2sStod%C5%AFlky,+155+00+Praha+13!3b1!8m2!3d50.0492395!4d14.3167979!3m4!1s0x470bbe08eb2cf95b:0xabc2251a76a36987!8m2!3d50.0467968!4d14.3046914?hl=cs">
-        </map>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d320.26340462372366!2d14.304779369250397!3d50.046822409556185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2scz!4v1532601061578" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
 </div>
+<div class="konec">
+    <p>
+        <b>Rezervace:</b>+ 420 775 293 365<br>
+        <b>Telefon:</b> + 420 326 965 235<br>
+        <b>Email:</b>info@zasluncem.cz
+    </p>
+    <p>
+        <b>Adresa:</b><br>
+        Namesti Junkovych 2808<br>
+        Praha 5<br>
+        155 00
+    </p>
+    <p><img src="images/palm.png"</p>
+</div>
 </body>
+
 </html>
