--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
+
 <div class="barva">
     <div class="header">
 
@@ -31,7 +32,7 @@
 </div>
 <div class="zac">
     <img src="images/happzonbeach.jpg">
-    <div class="perex"><b>Vydejte se za slunickem s nejlepsi zajezdovou kancelari!</b></div>
+    <div class="perex">Vydejte se za sluníckem s nejlepší cestovní kancelárí!</div>
 </div>
 
 <div class="upot">
@@ -40,7 +41,7 @@
     </div>
 
     <div class="info">
-        <a  href="detail.html"><h2>Romaticka dovolena na Bali</h2></a>
+        <a  href="detail.html"><h2>Romatická dovolená na Bali</h2></a>
     </div>
     <div class="info1 info">
         <p>- 2 týdny </p>
@@ -48,7 +49,7 @@
         <p>- cesta tam - letadlo </p>
         <p>- cesta zpět - letadlo </p>
         <p>- ubytování - 4* hotel </p>
-        <a class="zajem" href="detail.html">Mam zajem</a>
+        <a class="zajem" href="detail.html">Mám zájem</a>
     </div>
     <!--<div class="b">-->
         <!--<h3>Mám zájem</h3>-->
@@ -61,15 +62,15 @@
         <img src="images/bermude.png">
     </div>
     <div class="info">
-        <h2>3-denni zájezd k bermudskemu trojuhleniku</h2>
+        <h2>3-denní zájezd k Bermudskému trojúhleníku</h2>
     </div>
     <div class="info1 info">
         <p>- 3 dny </p>
-        <p>- omezena kapacita </p>
+        <p>- omezená kapacita </p>
         <p>- doprava letadlem na Floridu </p>
-        <p>     -> z Floridy lodi</p>
-        <p>- ubytovani na penzionu</p>
-        <a class="zajem">Mam zajem</a>
+        <p>     -> z Floridy lodí</p>
+        <p>- ubytovaní na penzionu</p>
+        <a class="zajem">Mám zájem</a>
     </div>
     <div class="clean"></div>
 </div>
@@ -79,26 +80,32 @@
         <img src="images/33.png">
     </div>
     <div class="info">
-        <h2>Rodinna dovolena na Sahare</h2>
+        <h2>Rodinná dovolená na Sahaře</h2>
     </div>
     <div class="info1 info">
-        <p>- moznost pobytu az na 14 dni</p>
-        <p>- skvela dovolena pro celou rodinu</p>
-        <p>- zarucene vzdy slunecnne pocasi</p>
+        <p>- možnost pobytu až na 14 dní</p>
+        <p>- skvělá dovolená pro celou rodinu</p>
+        <p>- zaručené vždy slunečnné počasí</p>
         <p>- doprava letadlem</p>
-        <p>- ubytovani u mistnich obzvetel</p>
-        <a class="zajem">Mam zajem</a>
+        <p>- ubytovaní u místních obyvetel</p>
+        <a class="zajem">Mám zajem</a>
     </div>
     <div class="clean"></div>
 </div>
 
 
 <div class="konec">
-    <b>Telefon:</b>
-    + 420 775 293 365 <br>
-    + 420 326 965 235 <br>
-    <b>Email:</b>
-    info@zasluncem.cz <br>
+    <p>
+    <b>Rezervace:</b>+ 420 775 293 365<br>
+    <b>Telefon:</b> + 420 326 965 235<br>
+        <b>Email:</b>info@zasluncem.cz
+    </p>
+    <p>
+    <b>Adresa:</b><br>
+    Namesti Junkovych 2808<br>
+    Praha 5<br>
+    155 00
+    </p>
 
 </div>
 </body>
